# sandboxer

./: AGENTS.md  CLAUDE.md  PLAN.md  README.md  agent-shell  config.yml  pyproject.toml
agent-daily-ubuntu/: Dockerfile  README.md  docker-compose.yml
agent-daily-ubuntu-sudo/: Dockerfile  README.md  docker-compose.yml
agent_shell/: cli.py
sandboxer/: cli.py
sandboxer/core/: adapters.py  agents.py  cleanup.py  config.py  credential_proxy.py  docker.py  metadata.py  models.py  mount_allowlist.py  proxy_manager.py  sandboxes.py  templates.py
sandboxer/web/: __init__.py  app.py  auth.py  terminal.py
sandboxer/web/routes/: agents.py  chat.py  dashboard.py  sandboxes.py  settings.py  templates.py  terminal.py
sandboxer/web/static/: style.css  terminal.js
sandboxer/web/templates/: base.html  chat.html  dashboard.html  settings.html  terminal.html
sandboxer/web/templates/agents/: detail.html  edit.html
sandboxer/web/templates/partials/: nav.html  sandbox_list.html  sandbox_row.html
sandboxer/web/templates/sandboxes/: create.html  create_progress.html
sandboxer/web/templates/templates/: create.html  detail.html  edit.html
scripts/: agent-shell
tests/: test_adapters.py  test_agents.py  test_cleanup.py  test_cleanup_integration.py  test_cli.py  test_config.py  test_credential_proxy.py  test_docker.py  test_docker_integration.py  test_metadata.py  test_models.py  test_mount_allowlist.py  test_proxy_manager.py  test_sandboxes.py  test_sandboxes_integration.py  test_templates.py  test_web.py
